# mathclass

./: CMakeLists.txt  COPYRIGHT.txt  LICENSE  README.md
examples/: CMakeLists.txt  test_matrix.cpp  test_quaternion.cpp  test_vector.cpp
include/: interval.h  mathclass.h  matrix.h  matrixN.h  point2.h  quater.h  smatrixN.h  transf.h  unit_vector.h
src/: addition.cpp  box.cpp  box.h  complex.cpp  complex.h  cross_product.cpp  dot_product.cpp  interval.cpp  math_macro.h  matrix.cpp  matrix.h  matrixN.cpp  matrix_mul.cpp  optimize.h  optimize1.cpp  optimize2.cpp  pcg.cpp  point2.cpp  point3.cpp  point3.h  position.cpp  position.h  quater.cpp  scalar_div.cpp  scalar_mul.cpp  smatrixN.cpp  subtraction.cpp  transf.cpp  transq.cpp  transq.h  unit_vector.cpp  vector.cpp  vector.h  vectorN.cpp  vectorN.h
